...
      "채팅방 나가기" : "Exit",
      "채팅 요청" : "Chat requests",
      "새로운 채팅 요청이 지금은 없어요!" :"There are \nno new chat requests right now!",
      "님의 채팅 요청이 왔어요!" : "'s chat request has arrived!",
      "삭제" : "Remove",
      "수락" : "Accept",
      "로그아웃": "Log out",
      "내 프로필": "My Profile",
      "프로필 편집" : "Edit Profile",
      "언어 변경" : "Change Language",
      "Sneki의 추천" : "Sneki's Suggestion",
      "아직 추천이 만들어지지 않았어요. 조금 더 채팅해주세요" : "A recommendation hasn't been made yet. Please chat more",
      "새로운 추천을 원해요": "I want new suggestions",
...
      '다음 주제에 대해 이야기해보는거 어때요:  ' : "Why don't you talk about the following topic: ",
      "진행도 산출을 위해 조금만 더 채팅해주세요" : "Please chat a little more",
      "현재 언어교환 진행도: ": "Current progress: ",
      "님과의 첫 채팅이 도착했어요!": "'s first chat has arrived!",
      "탭을 해 태그를 추가/삭제해봐요" : "Tap to add/remove tags",
      "언어변경" : "한글",
      "선택 완료": "Selection complete",
      "네트워크 연결이 불안정해 프로필을 수정하지 못했어요. 재연결 후 다시 시도해주세요" : "Couldn't edit the profile due to network issues. Please try again later",
      "사용 언어" : "Speaks",
      "채팅 요청이 수락되었어요. 채팅 목록에서 확인할 수 있어요!": "Chat request accepted. Go check it out!",
      '채팅 요청 수락하기' : "Accept chat request",
      "새로고침" : "Reload!",
      "이미 해당 유저로부터의 요청이 존재합니다" : "Request from this user already exists",
...
