...
      },
      child: Scaffold(
        appBar: ChattingRoomAppBar(title: controller.chattingRoomTitle,
        additionalAction: IconButton(
          icon: Image.asset("assets/images/sneki_holding_here.png"),
          onPressed: controller.onSnekiTap,
          key: const ValueKey("roadMap"),
        ),
        ),
        backgroundColor: MyColor.purple,
        body: Container(
          decoration: const BoxDecoration(
            borderRadius: BorderRadius.vertical(
...
